# binfootprint

./: .travis.yml  LICENSE  README.md  pyproject.toml  setup.py
binfootprint/: __init__.py  binfootprint.py  util.py
examples/: example.py  example_ABC_Param.py  example_cache.py  example_serialize.py  exdoc.py
tests/: some_module.py  test_ABC_Parameter.py  test_binfootprint.py  test_shelve_cache.py
