[tool.poetry]
name = "binfootprint"
version = "0.2.1"
description = "serielize python objetcs in a deterministic way"
authors = ["Richard Hartmann"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cimatosa/binfootprint"
repository = "https://github.com/cimatosa/binfootprint"
keywords = ["serialization", "binary key"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.22.0"
scipy = "^1.8.0"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
