[tool.poetry]
name = "binfootprint"
version = "1.0.0"
description = "unique serialization of python objetcs"
authors = ["Richard Hartmann"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/richard-hartmann/binfootprint"
repository = "https://github.com/richard-hartmann/binfootprint"
keywords = ["serialization", "binary key", "cache", "function cache", "scientific computing"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.0"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
